<resources>
  <string name="app_name">Craps</string>
  <string name="plays_label">Plays:</string>
  <string name="wins_label">Wins:</string>
  <string name="winning_percentage_label">Winning percentage:</string>
  <string name="play_button">Play</string>
  <string name="play_on_button">Stop</string>
  <string name="play_off_button">Run</string>
  <string name="reset_button">Reset</string>
  <string name="roll_format">[%1$d] [%2$d] = %3$d</string>
  <string name="roll_total_format">= %1$2d</string>

</resources>
