<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="edu.cnm.deepdive.craps.controllers.MainActivity">

  <ListView
    android:id="@+id/rolls_list"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/plays_label"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"/>
  <TextView
    android:id="@+id/plays_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/plays_label"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/play"
    app:layout_constraintRight_toLeftOf="@+id/plays_value"/>

  <TextView
    android:id="@+id/plays_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="0"
    app:layout_constraintLeft_toRightOf="@+id/plays_label"
    app:layout_constraintBottom_toTopOf="@+id/play"
    app:layout_constraintRight_toLeftOf="@+id/wins_label"/>

  <TextView
    android:id="@+id/wins_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/wins_label"
    app:layout_constraintLeft_toRightOf="@+id/plays_value"
    app:layout_constraintBottom_toTopOf="@+id/play"
    app:layout_constraintRight_toLeftOf="@+id/wins_value"/>

  <TextView
    android:id="@+id/wins_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="0"
    app:layout_constraintLeft_toRightOf="@+id/wins_label"
    app:layout_constraintBottom_toTopOf="@+id/play"
    app:layout_constraintRight_toLeftOf="@+id/percentage_label"/>

  <TextView
    android:id="@+id/percentage_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/winning_percentage_label"
    app:layout_constraintLeft_toRightOf="@+id/wins_value"
    app:layout_constraintBottom_toTopOf="@+id/play"
    app:layout_constraintRight_toLeftOf="@+id/percentage_value"/>

  <TextView
    android:id="@+id/percentage_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="0.00%"
    app:layout_constraintLeft_toRightOf="@+id/percentage_label"
    app:layout_constraintBottom_toTopOf="@+id/play"
    app:layout_constraintRight_toRightOf="parent"/>

  <Button
    android:id="@+id/play"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/play_button"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/play_on"/>

  <ToggleButton
    android:id="@+id/play_on"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textOn="@string/play_on_button"
    android:textOff="@string/play_off_button"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="@+id/play"
    app:layout_constraintRight_toLeftOf="@+id/reset"/>

  <Button
    android:id="@+id/reset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/reset_button"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="@+id/play_on"
    app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
